[project]
name = "nswmaths-helperbot"
version = "0.1.0"
description = "helper bot for the nswmaths.com server"
authors = [
    {name = "placeholder",email = "placeholder@placeholder.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
