[project]
name = "nswmaths-helperbot"
description = "helper bot for the nswmaths.com server"
authors = [
    {name = "Icecreambobcat",email = "icekingrex123@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf (>=1.25.2,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "py-cord (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pyright]
reportInvalidTypeForm = "none"
